--- a/package.json
+++ b/package.json
@@ -7,18 +7,37 @@
     "delovable": "./dist/index.js"
   },
   "type": "module",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "cli",
     "lovable",
-    "deployment"
+    "deployment",
+    "cleanup",
+    "migration",
+    "cloudflare",
+    "vercel",
+    "netlify"
   ],
-  "author": "",
+  "author": "neckolis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neckolis/delovable.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neckolis/delovable/issues"
+  },
+  "homepage": "https://github.com/neckolis/delovable",
   "license": "MIT",
   "dependencies": {
     "commander": "^13.1.0",
