--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   ],
   "scripts": {
     "build": "tsc",
+    "build:web": "vite build",
     "start": "node dist/index.js",
     "dev": "tsc --watch",
+    "dev:web": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "worker:dev": "cd worker && wrangler dev",
+    "worker:deploy": "cd worker && wrangler deploy",
+    "pages:deploy": "npm run build:web && wrangler pages deploy ./dist"
   },
   "keywords": [
     "cli",
@@ -40,17 +45,54 @@
   "homepage": "https://github.com/neckolis/delovable",
   "license": "MIT",
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.32.0",
     "@types/node-fetch": "^2.6.12",
     "@types/tmp": "^0.2.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
     "globby": "^14.1.0",
+    "lucide-react": "^0.263.1",
+    "next-themes": "^0.2.1",
     "node-fetch": "^2.7.0",
-    "tmp": "^0.2.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
+    "sonner": "^0.6.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "tmp": "^0.2.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.14.1",
-    "typescript": "^5.8.3"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.8.3",
+    "vite": "^4.4.5",
+    "wrangler": "^3.0.0"
   }
 }
