Enhance web UI and worker with improved error handling, private repository detection, and better user experience

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -17,3 +17,7 @@ WORKER_ENV = "production"
 name = "delovable-worker-dev"
 [env.development.vars]
 WORKER_ENV = "development"
+
+# Enable logs
+[observability.logs]
+enabled = true
