Add GitHub repository creation feature and UI improvements

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -12,6 +12,10 @@ preview_bucket_name = "delovable-temp-dev"
 [vars]
 WORKER_ENV = "production"
 
+# GitHub OAuth credentials (these are placeholders, set real values in the dashboard)
+GITHUB_CLIENT_ID = "your-github-client-id"
+GITHUB_CLIENT_SECRET = "your-github-client-secret"
+
 # Development environment
 [env.development]
 name = "delovable-worker-dev"
